--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.18.2",
     "vercel": "^33.5.1",
+    "vikas-profile": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
